# datafusion-table-provider-flight

./: Cargo.toml  README.md
examples/: flight-sql.rs
src/: codec.rs  exec.rs  lib.rs  sql.rs
